--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "format": "^0.2.2",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
