--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\""
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
     "format": "^0.2.2",
     "next": "14.0.3",
     "react": "^18",
