--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-loader-spinner": "^5.4.5"
   },
   "devDependencies": {
     "@types/multicoin-address-validator": "^0.5.2",
