--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "format": "^0.2.2",
+    "jsqr": "^1.4.0",
     "lodash": "^4.17.21",
     "multicoin-address-validator": "^0.5.13",
     "next": "14.0.3",
